--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@
  DB_PASS=123
  DB_NAME=db_showproduct
  DB_PORT=3310
-# REACT_APP_BASE_URL=https://xtx2xfmf-5000.asse.devtunnels.ms
+ JWT_SECRET=my_simple_secret
+# REACT_APP_BASE_URL=https://vf47wjkn-5000.asse.devtunnels.ms
 # HOST=e_commerce.local http://49.49.230.180:5000 http://192.168.0.105:5000
 # PORT=3002          
