--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.3.1",
-    "nodemon": "^3.1.4"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
+    "qrcode": "^1.5.4",
+    "ws": "^8.18.0"
   },
   "engines": {
     "node": "20.15.1",
